<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_medications"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="@string/menu_medications" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_svgrepo_com"
            android:title="@string/menu_logout" />

    </group>
</menu>